# haskell_course

./: .gitignore  LICENSE  README.md  haskell-course.cabal
cis194/: cis194.cabal
cis194/homework1/: Homework1.hs  Homework1Test.hs  README.md  Sandbox1.hs
cis194/homework10/: AParser.hs  Sandbox10.hs
cis194/homework11/: SExpr.hs  Sandbox11.hs
cis194/homework12/: Risk.hs  Sandbox12.hs
cis194/homework2/: LogAnalysis.hs  Sandbox2.hs
cis194/homework3/: Golf.hs  Sandbox3.hs
cis194/homework4/: Homework4.hs  Sandbox4.hs
cis194/homework5/: Calc.hs
cis194/homework6/: Fibonacci.hs
cis194/homework7/: Editor.hs  JoinList.hs  Sandbox7.hs  Scrabble.hs  Sized.hs
cis194/homework8/: Party.hs  Sandbox8.hs
cis194/homework9/: Sandbox9.hs
