cabal-version:      3.0
name:               cis194
version:            0.1.0.0
description:        Solutions to CIS194 Haskell Course
build-type:         Simple

library
  exposed-modules:  Homework1
  build-depends:    base >=4.14 && <4.19
  hs-source-dirs:   homework1
  default-language: Haskell2010

test-suite homework1-test
  type:             exitcode-stdio-1.0
  main-is:          Homework1Test.hs
  build-depends:    base >=4.14 && <4.19
                  , hspec >=2.7
                  , cis194
  hs-source-dirs:   homework1
  default-language: Haskell2010 