cabal-version:      3.0
name:               cis194
version:            0.1.0.0
description:        Solutions to CIS194 Haskell Course
build-type:         Simple

library
  exposed-modules:  Homework1
                  , Sandbox1
                  , LogAnalysis
                  , Sandbox2
                  , Sandbox3
                  , Golf
                  , Sandbox4
                  , Homework4
                  , Calc
                  , Fibonacci
                  , Sandbox7
                  , Scrabble
                  , Sized
                  , Sandbox8
                  , Party
                  , Sandbox9
                  , Sandbox10
                  , AParser
  other-modules:    Log
                  , ExprT
                  , Parser
                  , StackVM
                  , Buffer
                  , Editor
                  , Employee
  build-depends:    base >=4.14 && <4.19
                  , Cabal >= 2.10.2.0
                  , safe
                  , mtl
                  , containers
  hs-source-dirs:   homework1
                  , homework2
                  , homework3
                  , homework4
                  , homework5
                  , homework6
                  , homework7
                  , homework8
                  , homework9
                  , homework10
  default-language: Haskell2010

test-suite homework1-test
  type:             exitcode-stdio-1.0
  main-is:          Homework1Test.hs
  build-depends:    base >=4.14 && <4.19
                  , hspec >=2.7
                  , cis194
  other-modules:    Homework1
  hs-source-dirs:   homework1
  default-language: Haskell2010
  ghc-options:      -main-is Homework1Test

executable string-editor
  main-is:          StringBufEditor.hs
  other-modules:    Buffer
                  , Editor
                  , StringBuffer
  build-depends:    base >=4.14 && <4.19, cis194, mtl
  hs-source-dirs:   homework7
  default-language: Haskell2010

executable joinlist-editor
  main-is:          JoinList.hs
  other-modules:    Buffer
                  , Editor
                  , Scrabble
                  , Sized
  build-depends:    base >=4.14 && <4.19, cis194, mtl
  hs-source-dirs:   homework7
  default-language: Haskell2010